--- a/SoloProj/recommendations.css
+++ b/SoloProj/recommendations.css
@@ -25,22 +25,32 @@
   
  
   #recommended{
-    position: fixed;
-    top: 320px;
-    width: 45vw;
+    position: relative;
+    top: 340px;
+    text-align: -webkit-center;
+
+
+
+
+
+
+
                     height: 50vh;
-                    background: #8080809c
+                    background: #80808000
                     
                     
                     
   }
   #recDetails{
-    position: fixed;
+    position: relative;
     width: 23vw;
                     height: 50vh;
                     
                     align-self: flex-end;
-                    background: #8080809c
+                    background: #8080809c;
+                    background-image: url('ps4.jpg');
+                    background-size: cover;
+                    
   }
   #reCPicture{
     position: fixed;
@@ -63,7 +73,7 @@
   #gameShortInfo{
     position: relative;
     width: 20vw;
-    top: 200px;
+    top: 220px;
   }
   #profileDisplay{
     background-color: black;
@@ -82,9 +92,9 @@ height: 140px;
     top: 40;
   }
   #userOptions{
-    position: fixed;
-top: 320px;
-right: 10;
+    position: relative;
+top: 180px;
+
 width: 52vw;
 height: 50vh;
 background: #8080809c
@@ -110,6 +120,7 @@ text-align-last: center;
     width: 23vw;
     height: 140px; 
     text-align: center; 
+    top: 60px;
   }
   #gameTitleText{
     position: relative;
@@ -140,4 +151,8 @@ text-align-last: center;
 
   #headerCard {
     background-color: black;
+  }
+  #main{
+    align-items: center;
+    align-self: center;
   }
